<resources>
    <string name="app_name">Discover Northumberland</string>
    <string name="enter">Enter</string>
    <string name="todo">TODO</string>
    <string name="title_activity_bookmarks">Bookmarks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="directions">Directions</string>
    <string name="share">Share</string>
    <string name="listen">Listen</string>
    <string name="stop">Stop</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_cras_ac_consectetur_eros_sed_gravida_mauris_donec_consectetur_nibh_at_massa_vehicula_porttitor_donec_porttitor_diam_sit_amet_suscipit_blandit_nulla_neque_lobortis_erat_consequat_fringilla_nisi_ipsum_ut_tellus_nulla_et_dolor_at_purus_varius_aliquet_sed_a_ex_fusce_diam_elit_blandit_quis_posuere_a_maximus_vitae_nisl_integer_id_lorem_dignissim_vestibulum_dolor_non_tincidunt_libero_proin_congue_elit_id_nisi_rutrum_et_egestas_libero_egestas_vivamus_efficitur_magna_a_massa_placerat_euismod_quisque_placerat_varius_ipsum_pellentesque_tristique_elit_auctor_quis_quisque_luctus_at_lorem_vel_ullamcorper_mauris_nec_commodo_nisl_nam_consectetur_molestie_luctus">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac consectetur eros, sed gravida mauris. Donec consectetur nibh at massa vehicula porttitor. Donec porttitor, diam sit amet suscipit blandit, nulla neque lobortis erat, consequat fringilla nisi ipsum ut tellus. Nulla et dolor at purus varius aliquet sed a ex. Fusce diam elit, blandit quis posuere a, maximus vitae nisl. Integer id lorem dignissim, vestibulum dolor non, tincidunt libero. Proin congue elit id nisi rutrum, et egestas libero egestas. Vivamus efficitur magna a massa placerat euismod. Quisque placerat varius ipsum, pellentesque tristique elit auctor quis. Quisque luctus at lorem vel ullamcorper. Mauris nec commodo nisl. Nam consectetur molestie luctus.</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="image_of_location">Image of location</string>
    <string name="rate">Rate</string>
    <string name="back_button">Back Button</string>
    <string name="title_activity_navigation">Map</string>
    <string name="title_activity_search">Search</string>
    <string name="produced_for">Produced for</string>
    <string name="newcatle_logo">Newcatle Logo</string>
    <string name="northumberland_concil_logo">Northumberland Concil Logo</string>
    <string name="error_connecting_to_server">Error Connecting to Server</string>
    <string name="retry">Retry</string>
    <string name="_4_3">4.3</string>
    <string name="bookmark">Bookmark</string>
    <string name="_1_star">1 Star</string>
    <string name="_2_star">2 Star</string>
    <string name="_3_star">3 Star</string>
    <string name="_4_star">4 Star</string>
    <string name="_5_star">5 Star</string>
    <string name="back_button">Back Button</string>
    <string name="succesfully_logged_in">Succesfully Logged In</string>
    <string name="log_out">Log Out</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="splash_image">Splash Image</string>
    <string name="back_button">Back Button</string>
    <string name="topic">TOPIC</string>
    <string name="discover_northumberland">Discover Northumberland</string>
    <string name="team_19">Team 19</string>
    <string name="string_logo">string/logo</string>
    <string name="cancel">Cancel</string>
    <string name="bookmark">Bookmark</string>
    <string name="would_you_like_to_add_this_location_to_your_nbookmarks">Would you like to add this location to your \nbookmarks?</string>
    <string name="bookmark_this_location">Bookmark this location</string>
    <string name="bookmark_this_location">Bookmark this location</string>
    <string name="cancel">Cancel</string>
    <string name="location_is_already_bookmarked_nwould_you_like_to_delete">Location is already bookmarked \nwould you like to delete?</string>
    <string name="delete">Delete</string>
    <string name="rate_this_location">Rate this location</string>
    <string name="how_would_you_rate_this_location_out_of_5">How would you rate this location out of 5?</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="error_connecting_to_server">Error Connecting to Server</string>
    <string name="retry">Retry</string>
    <string name="heritage">Heritage</string>
    <string name="culture">Culture</string>
    <string name="cuisine">Cuisine</string>
    <string name="sport">Sport</string>
    <string name="search">Search</string>
    <string name="heritagebuttonimage">heritageButtonImage</string>
    <string name="culturebuttonimage">cultureButtonImage</string>
    <string name="cuisinebuttonimage">cuisineButtonImage</string>
    <string name="sportsbuttonimage">sportsButtonImage</string>
    <string name="searchbuttonimage">searchButtonImage</string>
    <string name="_4_3">4.3</string>
    <string name="bookmark">Bookmark</string>
    <string name="star_5">Star 5</string>
    <string name="star_4">Star 4</string>
    <string name="star_3">Star 3</string>
    <string name="star_2">Star 2</string>
    <string name="star_1">Star 1</string>

</resources>
