<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="10dp"
    android:layout_width="350dp"
    android:layout_height="175dp"
    android:background="@drawable/layout_rounded_corners">

    <TextView
        android:id="@+id/popupRatingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/rate_this_location"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/starButtonLinearLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popupRatingTitle">

        <ImageView
            android:id="@+id/starImageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/_1_star"
            app:srcCompat="@drawable/ic_star_border_grey_24dp" />

        <ImageView
            android:id="@+id/starImageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/_2_star"
            app:srcCompat="@drawable/ic_star_border_grey_24dp" />


        <ImageView
            android:id="@+id/starImageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/_3_star"
            app:srcCompat="@drawable/ic_star_border_grey_24dp" />

        <ImageView
            android:id="@+id/starImageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/_4_star"
            app:srcCompat="@drawable/ic_star_border_grey_24dp" />


        <ImageView
            android:id="@+id/starImageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/_5_star"
            app:srcCompat="@drawable/ic_star_border_grey_24dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/how_would_you_rate_this_location_out_of_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starButtonLinearLayout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/tab_indicator_text"
        app:layout_constraintBottom_toTopOf="@+id/popupRatingButtonsLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/popupRatingButtonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel" />

        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@android:color/tab_indicator_text"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/submit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>