<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/back_button"
        android:elevation="1dp"
        android:focusable="true"
        android:onClick="onBackButtonOnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

    <ImageView
        android:id="@+id/dnLogo2"
        android:layout_width="386dp"
        android:layout_height="435dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dn_logo_text" />

    <TextView
        android:id="@+id/loggedInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/succesfully_logged_in"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dnLogo2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loggedInTextView">

        <Button
            android:id="@+id/logOutButton"
            style='style="?android:attr/buttonBarButtonStyle'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="logOutButtonOnClick"
            android:text="@string/log_out" />

        <Button
            android:id="@+id/okButton"
            style='style="?android:attr/buttonBarButtonStyle'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOkButtonOnClick"
            android:text="@string/ok" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>