<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    android:layout_width="350dp"
    android:layout_height="175dp"
    android:background="@drawable/layout_rounded_corners">

    <TextView
        android:id="@+id/popupRatingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/bookmark_this_location"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/location_is_already_bookmarked_nwould_you_like_to_delete"
        app:layout_constraintBottom_toTopOf="@+id/popupRatingButtonsLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popupRatingTitle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FF424242"
        app:layout_constraintBottom_toTopOf="@+id/popupRatingButtonsLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/popupRatingButtonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bookmarkCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#FF424242" />

        <Button
            android:id="@+id/deleteBookmarkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/delete" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>