<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMenuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressBarConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainMenuBG"
        android:elevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/mainPageLoadingProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_connecting_to_server"
            android:textAlignment="center"
            android:textSize="36sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/retry"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/mainMenuLinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="450dp" />

        <ScrollView
            android:id="@+id/MainMenuButtonsScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorMainMenuBG">

            <LinearLayout
                android:id="@+id/MainMenuButtonsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:paddingBottom="15dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/heritageButtonImage"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/heritagebuttonimage"
                        android:elevation="20dp"
                        android:focusable="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_buttonimagevector2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/heritageButtonTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="25dp"
                        android:fontFamily="serif"
                        android:text="@string/heritage"
                        android:textSize="36sp"
                        app:layout_constraintBottom_toBottomOf="@+id/heritageButtonImage"
                        app:layout_constraintEnd_toEndOf="@+id/heritageButtonImage"
                        app:layout_constraintStart_toStartOf="@+id/heritageButtonImage"
                        app:layout_constraintTop_toTopOf="@+id/heritageButtonImage" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/cultureButtonImage"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/culturebuttonimage"
                        android:elevation="20dp"
                        android:focusable="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_buttonimagevector3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/CultureButtonTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="25dp"
                        android:fontFamily="serif"
                        android:text="@string/culture"
                        android:textSize="36sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/cuisineButtonImage"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/cuisinebuttonimage"
                        android:elevation="20dp"
                        android:focusable="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_buttonimagevector4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/cultureButtonTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="25dp"
                        android:fontFamily="serif"
                        android:text="@string/cuisine"
                        android:textSize="36sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/sportsButtonImage"
                        android:layout_width="wrap_content"
                        android:layout_height="130dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/sportsbuttonimage"
                        android:elevation="20dp"
                        android:focusable="true"
                        android:src="@drawable/ic_buttonimagevector1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/cultureButtonTextView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="25dp"
                        android:fontFamily="serif"
                        android:text="@string/sport"
                        android:textSize="36sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/searchButtonImage"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/searchbuttonimage"
                        android:elevation="20dp"
                        android:focusable="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_buttonimagevector2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/searchButtonTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="25dp"
                        android:fontFamily="serif"
                        android:text="@string/search"
                        android:textSize="36sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>